[gd_scene load_steps=22 format=3 uid="uid://dvag253a51pco"]

[ext_resource type="Texture2D" uid="uid://bj4hwbgo3tnmi" path="res://assets/sprite/bandim.png" id="1_6n4i8"]
[ext_resource type="Script" uid="uid://c7txa37pqv7mr" path="res://scripts/enemy_bandim.gd" id="1_pwmgu"]
[ext_resource type="Script" uid="uid://cper3rsha37eo" path="res://scripts/enemy_data.gd" id="2_78ggm"]
[ext_resource type="Shader" uid="uid://wykxxfv30sal" path="res://shaders/flash.gdshader" id="3_wjy0h"]

[sub_resource type="Resource" id="Resource_78ggm"]
script = ExtResource("2_78ggm")
type = 1
xp_gain = 0
metadata/_custom_type_script = "uid://cper3rsha37eo"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nq4ng"]
size = Vector2(16, 24)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t0s01"]
resource_local_to_scene = true
shader = ExtResource("3_wjy0h")
shader_parameter/flash_light = Vector4(1, 1, 1, 1)
shader_parameter/flash_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0ob4b"]
atlas = ExtResource("1_6n4i8")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n5yo"]
atlas = ExtResource("1_6n4i8")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr1in"]
atlas = ExtResource("1_6n4i8")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrtwp"]
atlas = ExtResource("1_6n4i8")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_644w0"]
atlas = ExtResource("1_6n4i8")
region = Rect2(24, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfmj6"]
atlas = ExtResource("1_6n4i8")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwmgu"]
atlas = ExtResource("1_6n4i8")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_78ggm"]
atlas = ExtResource("1_6n4i8")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n4i8"]
atlas = ExtResource("1_6n4i8")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjy0h"]
atlas = ExtResource("1_6n4i8")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0s01"]
atlas = ExtResource("1_6n4i8")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_aclem"]
atlas = ExtResource("1_6n4i8")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p84f8"]
atlas = ExtResource("1_6n4i8")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_nq4ng"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ob4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n5yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr1in")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrtwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_644w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfmj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_644w0")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwmgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78ggm")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n4i8")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjy0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0s01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aclem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p84f8")
}],
"loop": false,
"name": &"run",
"speed": 5.0
}]

[node name="EnemyBandim" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_pwmgu")
data = SubResource("Resource_78ggm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nq4ng")

[node name="DashHurtArea" type="Area2D" parent="." groups=["EnemyDash"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHurtArea"]
shape = SubResource("RectangleShape2D_nq4ng")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Root" type="Node2D" parent="."]
position = Vector2(4, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Root"]
material = SubResource("ShaderMaterial_t0s01")
sprite_frames = SubResource("SpriteFrames_nq4ng")
animation = &"run"

[node name="ObstacleRay" type="RayCast2D" parent="Root"]
position = Vector2(0, 9)
target_position = Vector2(30, 0)

[node name="OptionalJumpRay" type="RayCast2D" parent="Root"]
target_position = Vector2(100, -80)

[node name="HeadRay" type="RayCast2D" parent="Root"]
target_position = Vector2(0, -80)

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="animation_finished" from="Root/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
